--- a/android/app/src/main/res/drawable/mydivider.xml
+++ b/android/app/src/main/res/drawable/mydivider.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#076d27" />
+    <solid android:color="#008841" />
     <corners android:radius="0.5dp" />
     <stroke
         android:color="#FFFFFF"
