--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimary">#008841</color>
     <color name="colorPrimaryDark">#008841</color>
     <color name="colorAccent">#008841</color>
+    <color name="textColor">#000000</color>
 </resources>
