--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,20 +6,20 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
-        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item>
+        <!-- <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
+        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item> -->
+        <item name="android:textColor">@color/textColor</item>
     </style>
-     <style name="SpinnerItem" parent="Theme.AppCompat.Light.NoActionBar">>
+     <!-- <style name="SpinnerItem" parent="Theme.AppCompat.Light.NoActionBar">>
         <item name="android:textSize">18dp</item>
-    </style>
+    </style> -->
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
          <item name="android:windowBackground">@drawable/background_splash</item>
       </style>
-    <style name="SpinnerDropDownItem" parent="Theme.AppCompat.Light.NoActionBar">>
-        <item name="android:textColor">#ffffff</item>
+    <!-- <style name="SpinnerDropDownItem" parent="Theme.AppCompat.Light.NoActionBar">>
         <item name="android:textSize">16dp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/mydivider</item>
-    </style>
+    </style> -->
 
 </resources>
